<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Prison</string>
    <string name="prison_bars">Prison Bars</string>
    <string name="button_sit_up">Sit Up</string>
    <string name="button_push_up">Push Up</string>
    <string name="button_try_escape">Try Escape</string>
    <string name="zero">0</string>
    <string name="zero_power">0 POWER</string>
    <string name="zero_steps">0 STEPS</string>
    <string name="mockup_shape">Mockup for design</string>
    <string name="prisoner_status_free">OMG You Are Free! Game Over.</string>
    <string name="prisoner_status_escaping">You Escaped! RUN!!</string>
    <string name="prisoner_status_captured">You Are Currently In Jail</string>
    <string name="prisoner_status_praise_the_sun">PRAISE THE SUN</string>
    <string name="prisoner_status_killed_by_gods">The Gods Have Killed You. Game Over.</string>
    <string name="prisoner_status_died">You Died. Game Over.</string>
    <string name="prisoner_status_failed_escape">OH NO! Escape Failed = Back To Prison</string>

    <!-- Authentication Things -->

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1543194429124979</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1543194429124979</string>

    <!-- Notifications -->
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>

    <!-- Genofencing -->
    <string name="geofence_transition_invalid_type">Invalid geofence transition type, ENTER and EXIT are supported</string>
    <string name="geofence_transition_entered">Entering Geofence Area</string>
    <string name="geofence_transition_exited">Exiting Geofence Area</string>
    <string name="unknown_geofence_transition">Unknown Geofence Transition</string>
    <string name="fence_notification_inside_title">Inside prison area</string>
    <string name="fence_notification_outside_title">Outside prison area</string>
    <string name="fence_notification_outside_message">The guards are coming!! run!</string>
    <string name="fence_notification_inside_message">The guards are satisfied</string>
    <string name="anonymous">Anonymous User</string>
    <string name="user_already_logged_in">User already exist. Which one do you want use?</string>
    <string name="keep_new_login_button">This new login</string>
    <string name="keep_old_login_button">My old login</string>
    <string name="unknown_login_error">Unknown Error: Login Failed</string>
    <string name="cant_logout_anonymous_user_warning">Can\'t logout anonymous user</string>
    <string name="user_logged_out_message">You were logged out!</string>
    <string name="already_logged_in_message">You are already logged in</string>
    <string name="unknown_error">An unknown error occured</string>
    <string name="login_to_delete_account">Please relogin to delete account</string>
    <string name="welcome_to_prison">Welcome to Prison!</string>
    <string name="goal_of_game">The goal of this game is to get as much power as possible and try to escape from jail.</string>
    <string name="once_escaped">Once you have escape you need to run (yes run in real life!) to get out of prison!</string>
    <string name="friend_invite_extra_power">You were invited by a friend and have recieved 2000 starting power!</string>
    <string name="given_free_power">Your friend invite gave you 2000 free power!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
