<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrisonPrimary"
    tools:context=".FirebaseLink">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:alignmentMode="alignBounds"
        android:columnCount="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCounterPrimary"
            android:padding="10dp"
            android:text="@string/welcome_to_prison"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@color/colorCounterPrimary"
            android:padding="10dp"
            android:text="@string/goal_of_game"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCounterPrimary"
            android:padding="10dp"
            android:text="@string/once_escaped"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/friendInviteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@color/colorCounterPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/friend_invite_extra_power"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@color/colorCounterPrimary"
            android:text="Click here to start the game!"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>